# IntellijDetect

./: .gitignore  CMakeLists.txt  MainWindow.cpp  README.md  WelcomeWindow.cpp  WelcomeWindow.h  configure.sh  decodeCode.h  detectBarcode.cpp  detectBarcode.h  fetchData.cpp  main.cpp
barcode/: decodeCode.cpp  decodeCode.h  decoderCode39.h  transform.cpp  transform.h  utilsCode.h
data/: IntellijDetect.xcf
detection/: Detection.cpp  Detection.h
food/: Food.cpp  Food.h  Picture.cpp  Picture.h  Statistical.cpp  Statistical.h  StatisticalFood.cpp  StatisticalFood.h
include/food/: Food.h  ImageFood.h  PictureFood.h  StatsFood.h
include/image/: BuilderImage.h  BuilderNetwork.h  Detector.h  Image.h  InputImage.h
include/image/test/: BuilderNetwork.h  Detector.h  YoloDetector.h
include/interface/: CircularBar.h  Control.h  ControlPanel.h  Detection.h  Food.h  ImageWidget.h  Object.cpp  Object.h  Parameters.h  Person.h  PictureFood.h  PictureObject.h  PicturePerson.h  PictureWidget.h  SearchWidget.h  Sensor.h  Statistics.h  StatsFood.h  StatsObject.h  StatsPerson.h  TableWidget.h  UtilsInterface.h  Welcome.h
include/object/: ImageObject.h  Object.h  PictureObject.h  StatsObject.h
include/person/: ImagePerson.h  Person.h  PicturePerson.h  StatsPerson.h
include/settings/: Control.h  Sensor.h  Settings.h
include/utils/: UtilsFilePath.h  UtilsInterface.h
interface/: AddPicture.cpp  AddPicture.h  CircularBar.cpp  Control.cpp  ControlPanel.cpp  ControlPanel.h  Detection.cpp  Detection.h  Food.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Object.cpp  Object.h  Parameters.cpp  Parameters.h  Picture.cpp  Picture.h  QCircularBar.cpp  QCircularBar.h  StatisticalFood.cpp  StatisticalFood.h  StatisticalObject.cpp  StatisticalObject.h  StatisticalPerson.cpp  TableWidget.cpp  TableWidget.h  UtilsInterface.h  Welcome.cpp  Welcome.h
interface/ToDelete2/: CircularBar.h  Detection.cpp  Detection.h  Detection.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  WelcomeWindow.cpp  WelcomeWindow.h  WelcomeWindow.ui  main.cpp
object/: Object.cpp  Object.h  Picture.cpp  Picture.h  Statistical.cpp  Statistical.h
parameters/: Parameters.cpp  Parameters.h
person/: Person.cpp  Person.h  Picture.cpp  Picture.h  Statistical.cpp  Statistical.h
picture/: PictureWidget.cpp  PictureWidget.h
sources/: CMakeCache.txt  Makefile  cmake_install.cmake
sources/detection/: CMakeLists.txt
sources/food/: CMakeLists.txt  Food.cpp  Food.h  ImageFood.cpp  Picture.cpp  PictureFood.cpp  StatsFood.cpp
sources/image/: BoundingBox.h  BuilderImage.cpp  BuilderNetwork.cpp  CMakeLists.txt  Detector.cpp  InputImage.cpp
sources/image/test/: BoundingBox.h  BuilderNetwork.cpp  Detector.cpp  YoloDetector.cpp
sources/intellij/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
sources/interface/: .Detection.cpp.swp  CMakeLists.txt  CircularBar.cpp  Control.cpp  ControlPanel.cpp  Detection.cpp  DialogFileSystem.cpp  DialogFileSystem.h  Food.cpp  ImageWidget.cpp  Object.cpp  Object.h  Parameters.cpp  Person.cpp  PictureFood.cpp  PictureObject.cpp  PictureObject.h  PicturePerson.cpp  PictureWidget.cpp  SearchWidget.cpp  Sensor.cpp  Statistics.cpp  StatsFood.cpp  StatsFood.h  StatsObject.cpp  StatsPerson.cpp  TableWidget.cpp  Welcome.cpp
sources/object/: CMakeLists.txt  ImageObject.cpp  Object.cpp  PictureObject.cpp  StatsObject.cpp
sources/parameters/: CMakeLists.txt  Control.h  Parameters.cpp
sources/person/: CMakeLists.txt  ExtractPerson.h  ImagePerson.cpp  Person.cpp  Picture.h  PicturePerson.cpp  StatsPerson.cpp
sources/person/test/: ExtractPerson.cpp
sources/picture/: CMakeLists.txt
sources/search/: CMakeLists.txt
sources/settings/: .CMakeLists.txt.swp  CMakeLists.txt  Control.cpp  Sensor.cpp  Settings.cpp
sources/sources/food/: Makefile  cmake_install.cmake
sources/sources/intellij/: Makefile  cmake_install.cmake
sources/sources/interface/: Interface_automoc.cpp  Makefile  cmake_install.cmake
sources/sources/interface/Interface_automoc.dir/: moc_CircularBar_23TJILC3TR33IC.cpp  moc_ControlPanel_MV72LCEXM7IMHT.cpp  moc_Control_DR6ZHZSPQNUAAA.cpp  moc_Detection_YXIV56MFEDEEHV.cpp  moc_Food_ZZZAJAMHLAKDL7.cpp  moc_Object_7RVZURYLN4SGSO.cpp  moc_Parameters_OWX7NHAFLKSKZR.cpp  moc_Person_NY6Z2N2JM76F3O.cpp  moc_PictureFood_YRKDGLJJBBPZUX.cpp  moc_PictureObject_EMFVBNFN6KC63S.cpp  moc_PictureWidget_M3TH2FFSL32IZP.cpp  moc_Sensor_HDO46SVTBHMUXJ.cpp  moc_Statistics_KUOA6AZ5LKWLD3.cpp  moc_StatsFood_WWPCRKLFKFFUKA.cpp  moc_StatsObject_YXQPUXE6ENL2SE.cpp  moc_StatsPerson_A5YD4FVJGARU4O.cpp  moc_TableWidget_E47EIIHH4RDAVL.cpp
sources/sources/person/: Makefile  cmake_install.cmake
sources/sources/picture/: Makefile  cmake_install.cmake
sources/sources/search/: Makefile  cmake_install.cmake
sources/sources/sensor/: Makefile  cmake_install.cmake
utils/: UtilsInterface.h
